Check image sizes.

--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "actual-concept",
+   "id": "square-contemporary",
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "technical-stroke",
+   "id": "precise-retrieval",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "trained-waste",
+   "id": "conscious-firmware",
    "metadata": {
     "scrolled": false
    },
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "subject-estonia",
+   "id": "upper-shakespeare",
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "entertaining-council",
+   "id": "dressed-cover",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "structured-trigger",
+   "id": "casual-comfort",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bronze-yacht",
+   "id": "sealed-crash",
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "silver-oregon",
+   "id": "smaller-physiology",
    "metadata": {
     "scrolled": false
    },
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ideal-sudan",
+   "id": "discrete-initial",
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "dietary-simulation",
+   "id": "guided-transmission",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "frequent-official",
+   "id": "treated-dublin",
    "metadata": {},
    "outputs": [
     {
@@ -1076,8 +1076,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "id": "continuing-faculty",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Height  Width\n",
+       "3000    2000     18352\n",
+       "1500    1000      9789\n",
+       "1024    683       8458\n",
+       "1000    667       8430\n",
+       "1200    800       7569\n",
+       "                 ...  \n",
+       "1800    708          1\n",
+       "5088    3040         1\n",
+       "1748    2222         1\n",
+       "3713    3798         1\n",
+       "474     871          1\n",
+       "Length: 10730, dtype: int64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"Height\", \"Width\"]].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "configured-railway",
+   "id": "collaborative-economy",
    "metadata": {},
    "outputs": [],
    "source": []
